--- a/src/app/pages/tanimlar/stok/create-stok/create-stok.component.html
+++ b/src/app/pages/tanimlar/stok/create-stok/create-stok.component.html
@@ -95,7 +95,7 @@
                         [panelStyle]="{ 'z-index': '9999'  }" />
                 </stok-form>
                 <stok-form [span]="155" [label]="'Birim Fiyat'">
-                    <input type="number" form-control [(ngModel)]="frm.birimFiyat" name="ad" 
+                    <input  currencyInput  form-control [(ngModel)]="frm.birimFiyat" name="ad" 
                         class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
                 </stok-form>
                 <stok-form [span]="155" [label]="'Birim'">
