--- a/src/app/pages/tanimlar/kabin/create-kabin/create-kabin.component.scss
+++ b/src/app/pages/tanimlar/kabin/create-kabin/create-kabin.component.scss
@@ -204,3 +204,67 @@
 .active{
    box-shadow: inset 0 0 20px rgba(230, 0, 0, 0.1);
 }
+
+
+
+
+
+
+
+ // Image modal css'leri
+ .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+  .thumbnail {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+  
+  .thumbnail:hover {
+    transform: scale(1.1);
+  }
+  
+  .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+  }
+  
+  .modal-content {
+    position: relative;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-image {
+    max-width: 80%;
+    max-height: 80vh;
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    cursor: pointer;
+    color: #000;
+  }
+  
