--- a/src/shared/modal.scss
+++ b/src/shared/modal.scss
@@ -1,3 +1,108 @@
 @import "src/assets/scss/caption";
 @import "src/assets/scss/section";
 
+
+
+
+:host ::ng-deep{
+    .p-datatable .p-datatable-tbody > tr > td {
+        text-align: left;
+        border: 1px solid #dee2e6;
+        border-width: 0 0 1px 0;
+         padding: 0; 
+    }
+}
+
+
+
+
+
+
+
+
+
+
+* {
+
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.card-list {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    td{
+        border-right: 1px solid #ddd;
+        color: #575c61;
+        width: 90%;
+        padding: 0px 6px 0px 8px;
+        min-width: 70px;
+        font-weight: 600;
+        font-size: 11px; 
+        display: flex;
+        align-items:  center;
+        font-style: oblique; position: relative;
+    }
+}
+
+.card {
+    background-color: white;
+    // width: 350px;
+    max-width: 100px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: center;
+    transition: transform 0.3s ease;
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.card:hover {
+    transform: translateY(-10px);
+}
+
+.card img {
+    width: 100%;
+    // height: 150px;
+    object-fit: cover;
+}
+
+.card h2 {
+    font-size: 20px;
+    margin: 10px 0;
+    color: #333;
+}
+
+.card p {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 15px;
+}
+
+.card button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.card button:hover {
+    background-color: #0056b3;
+}
+
+
